--- a/index.html
+++ b/index.html
@@ -20,19 +20,27 @@
 
   <body>
     <!-- Full Page Header -->
-    <div class="navbar">
-      <div class="navHeader">
-        <h1>
-          Call Now <a href="tel:1-780-473-1420">(780) 473-1420</a><br />
-          8935-127 ave, Edmonton, Alberta
-        </h1>
-        <nav class="fullPage">
-          <button id="Home"><a href="#">Home</a></button>
-          <button id="Service"><a href="#">Service</a></button>
-          <button id="About"><a href="#">About Us</a></button>
-          <button id="Contact"><a href="#">Contact</a></button>
-        </nav>
-      </div>
+    <div class="nav">
+      <div class="Header">
+        <img src="Images/Dalzell-Wallpaper2.jpg" alt="logo" width="15%" />
+          <h1>
+            Call Now!<br />
+            <a href="tel:1-780-473-1420">(780) 473-1420</a><br />
+            8935-127 ave.<br />
+            Edmonton, Alberta
+          </h1>
+          </div>
+        <div class="navBar">
+            <nav>
+              <button class="activePage"><a href="index.html">Home</a></button>
+              <button><a href="service.html">Service</a></button>
+              <button><a href="about.html">About Us</a></button>
+              <button><a href="contact.html">Contact</a></button>
+            </nav>
+        </div>
+        <img src="Images/sports-car.jpg" alt="vet" width="100%" id="sportsCar"/>
+        </div>
+
       <!-- Mobile Header -->
       <div class="mobileHeader">
         <nav class="mobile">
@@ -40,20 +48,48 @@
             <i class="fa fa-navicon" style="font-size:46px"></i>
           </div>
           <div class="dropDown">
-            <button id="Home"><a href="#">Home</a></button>
-            <button id="Service"><a href="#">Service</a></button>
-            <button id="About"><a href="#">About Us</a></button>
-            <button id="Contact"><a href="#">Contact</a></button>
+            <button class="activePage"><a href="index.html">Home</a></button>
+              <button><a href="service.html">Service</a></button>
+              <button><a href="about.html">About Us</a></button>
+              <button><a href="contact.html">Contact</a></button>
           </div>
           <h1>
             Call Now! <a href="tel:1-780-473-1420">(780)473-1420</a><br />
             8935-127 ave
           </h1>
         </nav>
-        <img src="Images/Dalzell-Wallpaper2.jpg" alt="logo" width="100%" />
+        <img
+          src="Images/Dalzell-Wallpaper2.jpg"
+          alt="logo"
+          width="100%"
+          id="mobileImg"
+        />
       </div>
     </div>
     <!-- Main Content -->
+    <div class="welcomeFull">
+        <section>
+        <h1>Welcome</h1>
+        <p>
+          Since 1958, Dalzell's Auto Repair has stayed current with equipment and
+          has committed to ongoing training which allows us to provide our
+          customers with exceptional service. The one reason for our success is
+          that our customers trust us to do a very good job at a fair price.
+          Today, we are once again striving to stay on the forefront of the new
+          technology and the demands of vehicles both new and old with our new
+          location at 8935-127 ave in Edmonton, Alberta. This new facility is
+          fully equipped with state-of-the-art computer technology for today's
+          automobiles.
+        </p>
+        <p>
+            The traditions continue among all the staff, and we're very proud to say
+            that we only employ licensed or apprentice mechanics. Our clients can
+            rest assured that the staff working on their cars are fully trained and
+            know what they are doing.
+          </p>
+        </section>
+        <img src="Images/New-Shop.jpg" alt="New Shop" width="100%" />
+    </div>
     <div class="welcome">
       <h1>Welcome</h1>
       <p>
@@ -76,6 +112,7 @@
       </p>
     </div>
     <div class="testimonials">
+        <section class="text">
       <h1>Testimonials:</h1>
       <p>
         I was recently at the Dalzell's Auto Repair for a vehicle service and
@@ -87,23 +124,26 @@
         car." <br />On a side note, he jokingly ribbed one of the employees of
         Dalzell's (Gord) who was retired from Canadian Forces/Army, stating that
         he felt the Canadian Navy was tougher than the Canadian Army. I called a
-        tie. <br />Kevin F.
+        tie. </p> <p>Kevin F.</p>
       </p>
-      <section>
-        <img src="Images/JDPower.gif" alt="JDPower" width="51px" />
-        <img src="Images/CIA-Web.gif" alt="CIA" width="100px" />
+    </section>
+      <section class="images">
+        <img src="Images/CIA-Web.gif" alt="CIA" width="99px" />
         <img src="Images/autopro.gif" alt="Autopro" width="69px" />
+        <img src="Images/JDPower.gif" alt="JDPower" width="51px" />
         <img src="Images/aars_logo.gif" alt="aars logo" width="60px" />
         <img src="Images/amvic.gif" alt="amv logo" width="55px" />
-      </section>
+         </section>
     </div>
     <footer>
-      <section class="interac">
-        <img src="Images/interac.gif" alt="interac" />
-      </section>
-      <section class="foot">
-        <img src="Images/mastercard.gif" alt="mastercard" width="40px" />
-        <img src="Images/visa.gif" alt="visa" width="40px" />
+      <section class="payment">
+        <section class="interac">
+          <img src="Images/interac.gif" alt="interac" width="37px" />
+        </section>
+        <section class="foot">
+          <img src="Images/mastercard.gif" alt="mastercard" width="40px" />
+          <img src="Images/visa.gif" alt="visa" width="40px" />
+        </section>
       </section>
       <section class="legacy">
         <img src="Images/Legacy.jpg" alt="Legacy" width="30%" />
