--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
               <button><a href="contact.html">Contact</a></button>
           </div>
           <h1>
-            Call Now! <a href="tel:1-780-473-1420">(780)473-1420</a><br />
-            8935-127 ave
+            <a href="tel:1-780-473-1420"><button class="phone" style="font-size:24px">Call Now<i class="fa fa-phone"></i></button></a>
           </h1>
         </nav>
         <img
