--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <nav>
               <button class="activePage"><a href="index.html">Home</a></button>
               <button><a href="service.html">Service</a></button>
-              <button><a href="about.html">About Us</a></button>
+              <button><a href="About.html">About Us</a></button>
               <button><a href="contact.html">Contact</a></button>
             </nav>
         </div>
