--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="dropDown">
             <button class="activePage"><a href="index.html">Home</a></button>
               <button><a href="service.html">Service</a></button>
-              <button><a href="about.html">About Us</a></button>
+              <button><a href="About.html">About Us</a></button>
               <button><a href="contact.html">Contact</a></button>
           </div>
           <h1>
