services page commit

--- a/About.html
+++ b/About.html
@@ -33,9 +33,9 @@
         <div class="navBar">
             <nav>
               <button><a href="index.html">Home</a></button>
-              <button><a href="service.html">Service</a></button>
+              <button><a href="Services.html">Services</a></button>
               <button class="activePage"><a href="about.html">About Us</a></button>
-              <button><a href="contact.html">Contact</a></button>
+              <button><a href="Contact.html">Contact</a></button>
             </nav>
         </div>
         <img src="Images/Corvette_1280.jpg" alt="vet" width="100%" id="sportsCar"/>
@@ -49,9 +49,9 @@
           </div>
           <div class="dropDown">
             <button><a href="index.html">Home</a></button>
-              <button><a href="service.html">Service</a></button>
+              <button><a href="Services.html">Services</a></button>
               <button class="activePage"><a href="About.html">About Us</a></button>
-              <button><a href="contact.html">Contact</a></button>
+              <button><a href="Contact.html">Contact</a></button>
           </div>
           <h1>
             <a href="tel:1-780-473-1420"><button class="phone" style="font-size:24px">Call Now<i class="fa fa-phone"></i></button></a>
@@ -89,7 +89,7 @@
 <p>Today, the business is known as Dalzell's Auto Repair and is located at 8935-127 ave in Edmonton, Alberta.
    Delivering good service and repairs are traditions that have been passed down from Tom to his sons and grandson. We have changed with the times and kept up with technology, but remember where we came from......you just can't replace experience with technology. We have retained both customers and our core staff over the years for a reason, we care about our reputation.</p>
         </section>
-    </div>
+        </div>
     <footer>
         <section class="payment">
           <section class="interac">
@@ -104,5 +104,6 @@
           <img src="Images/Legacy.jpg" alt="Legacy" width="30%" />
         </section>
       </footer>
+      
     </body>
   </html>
