--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="navBar">
             <nav>
               <button class="activePage"><a href="index.html">Home</a></button>
-              <button><a href="service.html">Service</a></button>
+              <button><a href="Services.html">Services</a></button>
               <button><a href="About.html">About Us</a></button>
-              <button><a href="contact.html">Contact</a></button>
+              <button><a href="Contact.html">Contact</a></button>
             </nav>
         </div>
         <img src="Images/sports-car.jpg" alt="vet" width="100%" id="sportsCar"/>
@@ -49,9 +49,9 @@
           </div>
           <div class="dropDown">
             <button class="activePage"><a href="index.html">Home</a></button>
-              <button><a href="service.html">Service</a></button>
+              <button><a href="Services.html">Services</a></button>
               <button><a href="About.html">About Us</a></button>
-              <button><a href="contact.html">Contact</a></button>
+              <button><a href="Contact.html">Contact</a></button>
           </div>
           <h1>
             <a href="tel:1-780-473-1420"><button class="phone" style="font-size:24px">Call Now<i class="fa fa-phone"></i></button></a>
