--- a/index.html
+++ b/index.html
@@ -127,11 +127,14 @@
       </p>
     </section>
       <section class="images">
-        <img src="Images/CIA-Web.gif" alt="CIA" width="99px" />
-        <img src="Images/autopro.gif" alt="Autopro" width="69px" />
-        <img src="Images/JDPower.gif" alt="JDPower" width="51px" />
-        <img src="Images/aars_logo.gif" alt="aars logo" width="60px" />
-        <img src="Images/amvic.gif" alt="amv logo" width="55px" />
+        <h1>Proud to be a Member of</h1>
+        <section class="member">
+          <img src="Images/CIA-Web.gif" alt="CIA" width="99px" />
+          <img src="Images/autopro.gif" alt="Autopro" width="69px" />
+          <img src="Images/JDPower.gif" alt="JDPower" width="51px" />
+          <img src="Images/aars_logo.gif" alt="aars logo" width="60px" />
+          <img src="Images/amvic.gif" alt="amv logo" width="55px" />
+        </section>
          </section>
     </div>
     <footer>
