--- a/Services.html
+++ b/Services.html
@@ -50,8 +50,8 @@
           </div>
           <div class="dropDown">
             <button><a href="index.html">Home</a></button>
-              <button><a href="service.html">Services</a></button>
-              <button class="activePage"><a href="About.html">About Us</a></button>
+              <button class="activePage"><a href="service.html">Services</a></button>
+              <button><a href="About.html">About Us</a></button>
               <button><a href="contact.html">Contact</a></button>
           </div>
           <h1>
