--- a/Contact.html
+++ b/Contact.html
@@ -17,19 +17,24 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <!-- font-family: 'Lobster', cursive; -->
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <!-- Full Page Header -->
     <div class="nav">
       <div class="Header">
-        <img src="Images/Dalzell-Wallpaper2.jpg" alt="logo" width="15%" />
-          <h1>
-            Call Now!<br />
-            <a href="tel:1-780-473-1420">(780) 473-1420</a><br />
-            8935-127 ave.<br />
-            Edmonton, Alberta
-          </h1>
+        <section class="banner">
+          <h1>Dalzell's Automotive</h1>
+          <h2>Since 1958</h2>
+        </section>
+        <h2>
+          Call Now!<br />
+          <a href="tel:1-780-473-1420">(780) 473-1420</a><br />
+          8935-127 ave.<br />
+          Edmonton, Alberta
+        </h2>
           </div>
         <div class="navBar">
             <nav>
@@ -69,7 +74,7 @@
     <div class="contact-container">
         <div class="contact-info">
 <h1>Contact Us</h1>
-<p>Our new shop is now at 8935-127 ave, Edmonton, Alberta.<br>
+<p>Our shop is now at 8935-127 ave, Edmonton, Alberta.<br>
 
     We are open Monday-Friday 7:00AM-5:00PM.<br>
     
@@ -85,18 +90,16 @@
         </div>
     </div>
     <footer>
-        <section class="payment">
-          <section class="interac">
-            <img src="Images/interac.gif" alt="interac" width="37px" />
-          </section>
-          <section class="foot">
-            <img src="Images/mastercard.gif" alt="mastercard" width="40px" />
-            <img src="Images/visa.gif" alt="visa" width="40px" />
-          </section>
+      <section class="payment">
+        <img src="Images/Visa-Mastercard-Debit.png" alt="payment">
+      </section>
+      <section class="legacy">
+        <section class="facebook">
+          <p>Like<br> us on</p>
+          <a href="https://www.facebook.com/dalzellsautomotive" target="blank"><i class="fa fa-facebook-official" style="font-size:56px; color: rgb(54, 2, 151);"></i></a>
         </section>
-        <section class="legacy">
-          <img src="Images/Legacy.jpg" alt="Legacy" width="30%" />
-        </section>
+        <img src="Images/Dalzell-Wallpaper2.jpg" alt="logo" width="15%" />
+      </section>
       </footer>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.min.js"></script>
     </body>
