--- a/index.html
+++ b/index.html
@@ -16,19 +16,26 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <!-- font-family: 'Lobster', cursive; -->
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   </head>
-
+<script>window.alert(
+  "We are OPEN and committed to doing everything we can to stop the spread of this virus while remaining open and continuing to exceed our customers expectations each and every day. Call now for further details! We thank you for your continued support in these trying and uncertain times and once again pledge to do anything in our power to make your experience with us a positive one. Let's all continue to do our part to keep each other safe."
+);</script>
   <body>
     <!-- Full Page Header -->
     <div class="nav">
       <div class="Header">
-        <img src="Images/Dalzell-Wallpaper2.jpg" alt="logo" width="15%" />
-          <h1>
+        <section class="banner">
+          <h1>Dalzell's Automotive</h1>
+          <h2>Since 1958</h2>
+        </section>
+        <h2>
             Call Now!<br />
             <a href="tel:1-780-473-1420">(780) 473-1420</a><br />
             8935-127 ave.<br />
             Edmonton, Alberta
-          </h1>
+          </h2>
           </div>
         <div class="navBar">
             <nav>
@@ -139,16 +146,14 @@
     </div>
     <footer>
       <section class="payment">
-        <section class="interac">
-          <img src="Images/interac.gif" alt="interac" width="37px" />
-        </section>
-        <section class="foot">
-          <img src="Images/mastercard.gif" alt="mastercard" width="40px" />
-          <img src="Images/visa.gif" alt="visa" width="40px" />
-        </section>
+        <img src="Images/Visa-Mastercard-Debit.png" alt="payment">
       </section>
       <section class="legacy">
-        <img src="Images/Legacy.jpg" alt="Legacy" width="30%" />
+        <section class="facebook">
+          <p>Like<br> us on</p>
+          <a href="https://www.facebook.com/dalzellsautomotive" target="blank"><i class="fa fa-facebook-official" style="font-size:56px; color: rgb(54, 2, 151);"></i></a>
+        </section>
+        <img src="Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
       </section>
     </footer>
   </body>
