--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -10,8 +10,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/css/lightbox.min.css" type="text/css">
-    <link rel="stylesheet" href="Home.css" type="text/css" />
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="../Styles/style.css" type="text/css" />
+    <script src="../app.js"></script>
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -26,25 +26,25 @@
     <div class="nav">
       <div class="Header">
         <section class="banner">
-          <h1>Dalzell's Automotive</h1>
+          <img src="../Images/Danzells.png" alt="danzells-logo" width="65%">
           <h2>Since 1958</h2>
         </section>
         <h2>
-          Call Now!<br />
-          <a href="tel:1-780-473-1420">(780) 473-1420</a><br />
-          8935-127 ave.<br />
-          Edmonton, Alberta
-        </h2>
+            Call Now!<br />
+            <a href="tel:1-780-473-1420">(780) 473-1420</a><br />
+            8935-127 ave.<br />
+            Edmonton, Alberta
+          </h2>
           </div>
         <div class="navBar">
             <nav>
               <button><a href="index.html">Home</a></button>
-              <button><a href="Services.html">Services</a></button>
-              <button><a href="About.html">About Us</a></button>
-              <button class="activePage"><a href="contact.html">Contact</a></button>
+              <button><a href="../Pages/Services.html">Services</a></button>
+              <button><a href="../Pages/About.html">About Us</a></button>
+              <button class="activePage"><a href="../Pages/Contact.html">Contact</a></button>
             </nav>
         </div>
-        <img src="Images/ford.jpg" alt="ford-Image by oskaline from Pixabay" width="100%">
+        <img src="../Images/ford.jpg" alt="vet" width="100%" id="sportsCar"/>
         </div>
 
       <!-- Mobile Header -->
@@ -55,16 +55,16 @@
           </div>
           <div class="dropDown">
             <button><a href="index.html">Home</a></button>
-              <button><a href="Services.html">Services</a></button>
-              <button><a href="About.html">About Us</a></button>
-              <button class="activePage"><a href="contact.html">Contact</a></button>
+              <button><a href="../Pages/Services.html">Services</a></button>
+              <button><a href="../Pages/About.html">About Us</a></button>
+              <button class="activePage"><a href="../Pages/Contact.html">Contact</a></button>
           </div>
           <h1>
             <a href="tel:1-780-473-1420"><button class="phone" style="font-size:24px">Call Now<i class="fa fa-phone"></i></button></a>
           </h1>
         </nav>
         <img
-          src="Images/Dalzell-Wallpaper2.jpg"
+          src="../Images/Dalzell-Wallpaper2.jpg"
           alt="logo"
           width="100%"
           id="mobileImg"
@@ -74,7 +74,7 @@
     <div class="contact-container">
         <div class="contact-info">
 <h1>Contact Us</h1>
-<p>Our shop is now at 8935-127 ave, Edmonton, Alberta.<br>
+<p>Our shop is located at 8935-127 ave, Edmonton, Alberta.<br>
 
     We are open Monday-Friday 7:00AM-5:00PM.<br>
     
@@ -91,16 +91,15 @@
     </div>
     <footer>
       <section class="payment">
-        <img src="Images/Visa-Mastercard-Debit.png" alt="payment">
+        <img src="../Images/Visa-Mastercard-Debit.png" alt="payment">
       </section>
       <section class="legacy">
         <section class="facebook">
           <p>Like<br> us on</p>
           <a href="https://www.facebook.com/dalzellsautomotive" target="blank"><i class="fa fa-facebook-official" style="font-size:56px; color: rgb(54, 2, 151);"></i></a>
         </section>
-        <img src="Images/Dalzell-Wallpaper2.jpg" alt="logo" width="15%" />
+        <img src="../Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
       </section>
-      </footer>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.min.js"></script>
+    </footer>
     </body>
   </html>
