--- a/Pages/index.html
+++ b/Pages/index.html
@@ -19,9 +19,9 @@
     <!-- font-family: 'Lobster', cursive; -->
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   </head>
-<!-- <script>window.alert(
+<script>window.alert(
   "We are OPEN and committed to doing everything we can to stop the spread of this virus while remaining open and continuing to exceed our customers expectations each and every day. Call now for further details! We thank you for your continued support in these trying and uncertain times and once again pledge to do anything in our power to make your experience with us a positive one. Let's all continue to do our part to keep each other safe."
-);</script> -->
+);</script>
   <body>
     <!-- Full Page Header -->
     <div class="nav">
