--- a/Pages/About.html
+++ b/Pages/About.html
@@ -28,7 +28,7 @@
     <div class="nav">
       <div class="Header">
         <section class="banner">
-          <img src="../Images/Danzells.png" alt="danzells-logo" width="65%">
+          <img src="../Images/Dalzells.png" alt="dalzells-logo" width="65%">
           <h2>Since 1958</h2>
         </section>
         <h2>
