--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -36,7 +36,7 @@
           </div>
         <div class="navBar">
             <nav>
-              <button><a href="index.html">Home</a></button>
+              <button><a href="../Pages/index.html">Home</a></button>
               <button class="activePage"><a href="../Pages/Services.html">Services</a></button>
               <button><a href="../Pages/About.html">About Us</a></button>
               <button><a href="../Pages/Contact.html">Contact</a></button>
@@ -52,7 +52,7 @@
             <i class="fa fa-navicon" style="font-size:46px"></i>
           </div>
           <div class="dropDown">
-            <button><a href="index.html">Home</a></button>
+            <button><a href="../Pages/index.html">Home</a></button>
               <button class="activePage"><a href="../Pages/Services.html">Services</a></button>
               <button><a href="../Pages/About.html">About Us</a></button>
               <button><a href="../Pages/Contact.html">Contact</a></button>
