--- a/Pages/index.html
+++ b/Pages/index.html
@@ -39,7 +39,7 @@
           </div>
         <div class="navBar">
             <nav>
-              <button class="activePage"><a href="index.html">Home</a></button>
+              <button class="activePage"><a href="../Pages/index.html">Home</a></button>
               <button><a href="../Pages/Services.html">Services</a></button>
               <button><a href="../Pages/About.html">About Us</a></button>
               <button><a href="../Pages/Contact.html">Contact</a></button>
@@ -55,7 +55,7 @@
             <i class="fa fa-navicon" style="font-size:46px"></i>
           </div>
           <div class="dropDown">
-            <button class="activePage"><a href="index.html">Home</a></button>
+            <button class="activePage"><a href="../Pages/index.html">Home</a></button>
               <button><a href="../Pages/Services.html">Services</a></button>
               <button><a href="../Pages/About.html">About Us</a></button>
               <button><a href="../Pages/Contact.html">Contact</a></button>
