--- a/Services.html
+++ b/Services.html
@@ -36,10 +36,10 @@
           </div>
         <div class="navBar">
             <nav>
-              <button><a href="../Pages/index.html">Home</a></button>
-              <button class="activePage"><a href="../Pages/Services.html">Services</a></button>
-              <button><a href="../Pages/About.html">About Us</a></button>
-              <button><a href="../Pages/Contact.html">Contact</a></button>
+              <button><a href="index.html">Home</a></button>
+              <button class="activePage"><a href="Services.html">Services</a></button>
+              <button><a href="About.html">About Us</a></button>
+              <button><a href="Contact.html">Contact</a></button>
             </nav>
         </div>
         <img src="../Images/black-lamborghini.jpg" alt="vet" width="100%" id="sportsCar"/>
@@ -52,10 +52,10 @@
             <i class="fa fa-navicon" style="font-size:46px"></i>
           </div>
           <div class="dropDown">
-            <button><a href="../Pages/index.html">Home</a></button>
-              <button class="activePage"><a href="../Pages/Services.html">Services</a></button>
-              <button><a href="../Pages/About.html">About Us</a></button>
-              <button><a href="../Pages/Contact.html">Contact</a></button>
+            <button><a href="index.html">Home</a></button>
+              <button class="activePage"><a href="Services.html">Services</a></button>
+              <button><a href="About.html">About Us</a></button>
+              <button><a href="Contact.html">Contact</a></button>
           </div>
           <h1>
             <a href="tel:1-780-473-1420"><button class="phone" style="font-size:24px">Call Now<i class="fa fa-phone"></i></button></a>
