--- a/About.html
+++ b/About.html
@@ -16,11 +16,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- font-family: 'Lobster', cursive; -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lobster&display=swap"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
@@ -28,7 +23,7 @@
     <div class="nav">
       <div class="Header">
         <section class="banner">
-          <img src="../Images/Dalzells.png" alt="dalzells-logo" width="65%">
+          <img src="/Images/Dalzells.png" alt="dalzells-logo" width="65%">
           <h2>Since 1958</h2>
         </section>
         <h2>
@@ -46,7 +41,7 @@
               <button><a href="Contact.html">Contact</a></button>
             </nav>
         </div>
-        <img src="../Images/Corvette_1280.jpg" alt="vet" width="100%" id="sportsCar"/>
+        <img src="/Images/Corvette_1280.jpg" alt="vet" width="100%" id="sportsCar"/>
         </div>
 
       <!-- Mobile Header -->
@@ -66,7 +61,7 @@
           </h1>
         </nav>
         <img
-          src="../Images/Dalzell-Wallpaper2.jpg"
+          src="/Images/Dalzell-Wallpaper2.jpg"
           alt="logo"
           width="100%"
           id="mobileImg"
@@ -100,14 +95,14 @@
         </p>
       </section>
       <section class="picsMobile">
-        <img src="../Images/Legacy2.jpg" alt="staff1998" />
-        <img src="../Images/Staff2010.jpg" alt="staff2010" />
+        <img src="/Images/Legacy2.jpg" alt="staff1998" />
+        <img src="/Images/Staff2010.jpg" alt="staff2010" />
       </section>
       <section class="aboutpic1">
-        <img src="../Images/Legacy2.jpg" alt="staff1998" />
+        <img src="/Images/Legacy2.jpg" alt="staff1998" />
       </section>
       <section class="aboutpic2">
-        <img src="../Images/Staff2010.jpg" alt="staff2010" />
+        <img src="/Images/Staff2010.jpg" alt="staff2010" />
       </section>
       <section class="about2">
         <p>
@@ -124,7 +119,7 @@
     </div>
     <footer>
       <section class="payment">
-        <img src="../Images/Visa-Mastercard-Debit.png" alt="payment" />
+        <img src="/Images/Visa-Mastercard-Debit.png" alt="payment" />
       </section>
       <section class="legacy">
         <section class="facebook">
@@ -139,7 +134,7 @@
             ></i
           ></a>
         </section>
-        <img src="../Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
+        <img src="/Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
       </section>
     </footer>
   </body>
