--- a/Contact.html
+++ b/Contact.html
@@ -26,7 +26,7 @@
     <div class="nav">
       <div class="Header">
         <section class="banner">
-          <img src="../Images/Dalzells.png" alt="dalzells-logo" width="65%">
+          <img src="/Images/Dalzells.png" alt="dalzells-logo" width="65%">
           <h2>Since 1958</h2>
         </section>
         <h2>
@@ -44,7 +44,7 @@
               <button class="activePage"><a href="Contact.html">Contact</a></button>
             </nav>
         </div>
-        <img src="../Images/ford.jpg" alt="vet" width="100%" id="sportsCar"/>
+        <img src="/Images/ford.jpg" alt="vet" width="100%" id="sportsCar"/>
         </div>
 
       <!-- Mobile Header -->
@@ -64,7 +64,7 @@
           </h1>
         </nav>
         <img
-          src="../Images/Dalzell-Wallpaper2.jpg"
+          src="/Images/Dalzell-Wallpaper2.jpg"
           alt="logo"
           width="100%"
           id="mobileImg"
@@ -91,14 +91,14 @@
     </div>
     <footer>
       <section class="payment">
-        <img src="../Images/Visa-Mastercard-Debit.png" alt="payment">
+        <img src="/Images/Visa-Mastercard-Debit.png" alt="payment">
       </section>
       <section class="legacy">
         <section class="facebook">
           <p>Like<br> us on</p>
           <a href="https://www.facebook.com/dalzellsautomotive" target="blank"><i class="fa fa-facebook-official" style="font-size:56px; color: rgb(54, 2, 151);"></i></a>
         </section>
-        <img src="../Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
+        <img src="/Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
       </section>
     </footer>
     </body>
