--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- font-family: 'Lobster', cursive; -->
-    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   </head>
-<script>window.alert(
-  "We are OPEN and committed to doing everything we can to stop the spread of this virus while remaining open and continuing to exceed our customers expectations each and every day. Call now for further details! We thank you for your continued support in these trying and uncertain times and once again pledge to do anything in our power to make your experience with us a positive one. Let's all continue to do our part to keep each other safe."
-);</script>
+
   <body>
     <!-- Full Page Header -->
     <div class="nav">
       <div class="Header">
         <section class="banner">
-          <img src="../Images/Dalzells.png" alt="dalzells-logo" width="65%">
+          <img src="/Images/Dalzells.png" alt="dalzells-logo" width="65%">
           <h2>Since 1958</h2>
         </section>
         <h2>
@@ -45,7 +41,7 @@
               <button><a href="Contact.html">Contact</a></button>
             </nav>
         </div>
-        <img src="../Images/sports-car.jpg" alt="vet" width="100%" id="sportsCar"/>
+        <img src="/Images/sports-car.jpg" alt="vet" width="100%" id="sportsCar"/>
         </div>
 
       <!-- Mobile Header -->
@@ -65,7 +61,7 @@
           </h1>
         </nav>
         <img
-          src="../Images/Dalzell-Wallpaper2.jpg"
+          src="/Images/Dalzell-Wallpaper2.jpg"
           alt="logo"
           width="100%"
           id="mobileImg"
@@ -94,7 +90,7 @@
             know what they are doing.
           </p>
         </section>
-        <img src="../Images/New-Shop.jpg" alt="New Shop" width="100%" />
+        <img src="/Images/New-Shop.jpg" alt="New Shop" width="100%" />
     </div>
     <div class="welcome">
       <h1>Welcome</h1>
@@ -109,7 +105,7 @@
         fully equipped with state-of-the-art computer technology for today's
         automobiles.
       </p>
-      <img src="../Images/New-Shop.jpg" alt="New Shop" width="100%" />
+      <img src="/Images/New-Shop.jpg" alt="New Shop" width="100%" />
       <p>
         The traditions continue among all the staff, and we're very proud to say
         that we only employ licensed or apprentice mechanics. Our clients can
@@ -136,24 +132,24 @@
       <section class="images">
         <h1>Proud to be a Member of</h1>
         <section class="member">
-          <img src="../Images/CIA-Web.gif" alt="CIA" width="99px" />
-          <img src="../Images/autopro.gif" alt="Autopro" width="69px" />
-          <img src="../Images/JDPower.gif" alt="JDPower" width="51px" />
-          <img src="../Images/aars_logo.gif" alt="aars logo" width="60px" />
-          <img src="../Images/amvic.gif" alt="amv logo" width="55px" />
+          <img src="/Images/CIA-Web.gif" alt="CIA" width="99px" />
+          <img src="/Images/autopro.gif" alt="Autopro" width="69px" />
+          <img src="/Images/JDPower.gif" alt="JDPower" width="51px" />
+          <img src="/Images/aars_logo.gif" alt="aars logo" width="60px" />
+          <img src="/Images/amvic.gif" alt="amv logo" width="55px" />
         </section>
          </section>
     </div>
     <footer>
       <section class="payment">
-        <img src="../Images/Visa-Mastercard-Debit.png" alt="payment">
+        <img src="/Images/Visa-Mastercard-Debit.png" alt="payment">
       </section>
       <section class="legacy">
         <section class="facebook">
           <p>Like<br> us on</p>
           <a href="https://www.facebook.com/dalzellsautomotive" target="blank"><i class="fa fa-facebook-official" style="font-size:56px; color: rgb(54, 2, 151);"></i></a>
         </section>
-        <img src="../Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
+        <img src="/Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
       </section>
     </footer>
   </body>
