--- a/Services.html
+++ b/Services.html
@@ -18,13 +18,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-
-  <body>
+<body>
     <!-- Full Page Header -->
     <div class="nav">
       <div class="Header">
         <section class="banner">
-          <img src="../Images/Dalzells.png" alt="dalzells-logo" width="65%">
+          <img src="Images/Dalzells.png" alt="dalzells-logo" width="65%">
           <h2>Since 1958</h2>
         </section>
         <h2>
@@ -42,7 +41,7 @@
               <button><a href="Contact.html">Contact</a></button>
             </nav>
         </div>
-        <img src="../Images/black-lamborghini.jpg" alt="vet" width="100%" id="sportsCar"/>
+        <img src="/Images/black-lamborghini.jpg" alt="vet" width="100%" id="sportsCar"/>
         </div>
 
       <!-- Mobile Header -->
@@ -76,63 +75,63 @@
 <ul>
     <li>Vehicle Manufacturer Maintenance Service Schedules</li>
     <li>Computerized Engine Diagnostics</li>
-    <li>Complete Brake Services - includes ABS Systems & Anti-Lock Systems</li>
-    <li>Front End Suspension & Computerized Alignment</li>
+    <li>Complete Brake Services - includes ABS Systems &amp; Anti-Lock Systems</li>
+    <li>Front End Suspension  Computerized Alignment</li>
     <li>Transmission Services</li>
     <li>Cooling System Services</li>
     <li>Engine Tune-Up</li>
-    <li>Fuel Injection Flush, Repair & Service</li>
+    <li>Fuel Injection Flush, Repair &amp; Service</li>
     <li>New Tire Sales</li>
-    <li>Tire Repair & Balancing</li>
-    <li>Oil Change & Lubrication</li>
+    <li>Tire Repair &amp; Balancing</li>
+    <li>Oil Change &amp; Lubrication</li>
     <li>Power Steering Systems</li>
     <li>Air Conditioning</li>
     <li>Vehicle Inspections</li>
-    <li>Electrical & Wiring Systems</li>
+    <li>Electrical &amp; Wiring Systems</li>
 </ul>
 <h2>We also provide Car Rental and Shuttle Services</h2>
 </div>
 
     <div class="gallery">
-        <a href="../Images/classic-black-2.jpg" data-lightbox="img-gallery">
-        <img src="../Images/classic-black-2.jpg" alt="classic-black-2">
+        <a href="/Images/classic-black-2.jpg" data-lightbox="img-gallery">
+        <img src="/Images/classic-black-2.jpg" alt="classic-black-2">
         </a>
-        <a href="../Images/classic-red.jpg" data-lightbox="img-gallery">
-        <img src="../Images/classic-red.jpg" alt="classic-red">
+        <a href="/Images/classic-red.jpg" data-lightbox="img-gallery">
+        <img src="/Images/classic-red.jpg" alt="classic-red">
         </a>
-        <a href="../Images/blue-truck.jpg" data-lightbox="img-gallery">
-        <img src="../Images/blue-truck.jpg" alt="blue-truck">
+        <a href="/Images/blue-truck.jpg" data-lightbox="img-gallery">
+        <img src="/Images/blue-truck.jpg" alt="blue-truck">
         </a>
-        <a href="../Images/classic-black.jpg" data-lightbox="img-gallery">
-        <img src="../Images/classic-black.jpg" alt="classic-black">
+        <a href="/Images/classic-black.jpg" data-lightbox="img-gallery">
+        <img src="/Images/classic-black.jpg" alt="classic-black">
         </a>
-        <a href="../Images/bus.jpg" data-lightbox="img-gallery">
-        <img src="../Images/bus.jpg" alt="bus">
+        <a href="/Images/bus.jpg" data-lightbox="img-gallery">
+        <img src="/Images/bus.jpg" alt="bus">
         </a>
-        <a href="../Images/New-Shop2.jpg" data-lightbox="img-gallery">
-        <img src="../Images/New-Shop2.jpg" alt="New-Shop2">
+        <a href="/Images/New-Shop2.jpg" data-lightbox="img-gallery">
+        <img src="/Images/New-Shop2.jpg" alt="New-Shop2">
         </a>
-        <a href="../Images/rv-repair.jpg" data-lightbox="img-gallery">
-        <img src="../Images/rv-repair.jpg" alt="rv-repair">
+        <a href="/Images/rv-repair.jpg" data-lightbox="img-gallery">
+        <img src="/Images/rv-repair.jpg" alt="rv-repair">
         </a>
-        <a href="../Images/windshield-repair.jpg" data-lightbox="img-gallery">
-        <img src="../Images/windshield-repair.jpg" alt="windshield-repair">
+        <a href="/Images/windshield-repair.jpg" data-lightbox="img-gallery">
+        <img src="/Images/windshield-repair.jpg" alt="windshield-repair">
         </a>
-        <a href="../Images/Services.jpg" data-lightbox="img-gallery">
-        <img src="../Images/Services.jpg" alt="Services">
+        <a href="/Images/Services.jpg" data-lightbox="img-gallery">
+        <img src="/Images/Services.jpg" alt="Services">
         </a>
             </div>
         </div>
         <footer>
           <section class="payment">
-            <img src="../Images/Visa-Mastercard-Debit.png" alt="payment">
+            <img src="/Images/Visa-Mastercard-Debit.png" alt="payment">
           </section>
           <section class="legacy">
             <section class="facebook">
               <p>Like<br> us on</p>
               <a href="https://www.facebook.com/dalzellsautomotive" target="blank"><i class="fa fa-facebook-official" style="font-size:56px; color: rgb(54, 2, 151);"></i></a>
             </section>
-            <img src="../Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
+            <img src="/Images/Dalzell-Wallpaper2.jpg" alt="logo" width="16%" />
           </section>
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.min.js"></script>
